# selection

./: .gitignore  pyproject.toml
app/: factory.py
app/api/: __init__.py
app/api/product/: __init__.py
app/api/product/selection/: common.py  control.py  view.py
app/model/sql/: common.py
app/model/sql/product/: category.py  shelf.py  shelf_and_sku.py  skc.py  sku.py
app/util/: code.py  response.py  upload.py
config/: config.yaml  logging.yaml
